// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sources tree collapseTree can collapse a single source 1`] = `
" - root path= 
  - Main Thread path=Main Thread 
    - example.com path=Main Thread/example.com 
      - a/b path=Main Thread/example.com/a/b 
        - c.js path=Main Thread/example.com/a/b/c.js source_id=actor1 
"
`;

exports[`sources tree collapseTree correctly merges in a collapsed source with a deeper level 1`] = `
" - root path= 
  - Main Thread path=Main Thread 
    - example.com path=Main Thread/example.com 
      - a/b path=Main Thread/example.com/a/b 
        - c/d path=Main Thread/example.com/a/b/c/d 
          - e.js path=Main Thread/example.com/a/b/c/d/e.js source_id=actor2 
        - c.js path=Main Thread/example.com/a/b/c.js source_id=actor1 
"
`;

exports[`sources tree collapseTree correctly merges in a collapsed source with a shallower level 1`] = `
" - root path= 
  - Main Thread path=Main Thread 
    - example.com path=Main Thread/example.com 
      - a/b path=Main Thread/example.com/a/b 
        - c.js path=Main Thread/example.com/a/b/c.js source_id=actor1 
        - x.js path=Main Thread/example.com/a/b/x.js source_id=actor3 
"
`;

exports[`sources tree collapseTree correctly merges in a collapsed source with the same level 1`] = `
" - root path= 
  - Main Thread path=Main Thread 
    - example.com path=Main Thread/example.com 
      - a/b path=Main Thread/example.com/a/b 
        - c/d path=Main Thread/example.com/a/b/c/d 
          - e.js path=Main Thread/example.com/a/b/c/d/e.js source_id=actor2 
        - c.js path=Main Thread/example.com/a/b/c.js source_id=actor1 
"
`;
